--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@ title: Projects
 <ul>
   {% for post in site.projects %}
     <li>
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+      <h2><a href="{{ projects.url }}">{{ post.title }}</a></h2>
       {{ post.excerpt }}
     </li>
   {% endfor %}
