--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,8 @@ title: Blog
 
 <ul>
   {% for post in site.posts %}
-    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    <li><a href="{{ post.url }}">{{ post.title }}</a>
+    <span>({{ post.date | date: "%B, %Y"}})</span>
+    </li>
   {% endfor %}
 </ul>
