--- a/projects.html
+++ b/projects.html
@@ -1,14 +1,11 @@
 ---
-layout: default
-title: Projects
+layout: page
+title: About
+permalink: /about/
 ---
-<h1>Recent Projects</h1>
 
-<ul>
-  {% for post in site.projects %}
-    <li>
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-      {{ post.excerpt }}
-    </li>
-  {% endfor %}
-</ul>
+I'm a small part of the team at [Emergent Studios](https://emergentstudios.com.au/).
+<br />
+You can find a lot of my older work [here](https://www.instagram.com/north_wharf/).
+<br />
+Currently my main independent creative output is the [blog on this site](https://albertrex.github.io/blog.html).
